# OpSec

./: .gitignore
dual-boot-portal/: README.md  openportal.sh
haystack/: .gitignore  README.md  haystack.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
haystack/detectors/: base.py  ssh_brute_force.py  sudo_abuse.py
haystack/parsers/: arch_ssh.py  arch_sudo.py  base.py
haystack/tests/: test_detectors.py  test_parsers.py
locksmith/: .gitignore  README.md  locksmith.py  pyproject.toml  requirements-dev.txt  requirements.txt
mini-lynis/: .gitignore  README.md  mini_lynis.py  pyproject.toml  requirements-dev.txt  requirements.txt
web_recon/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  web_recon.py
